[package]
name = "shape-lerping"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon" }
lerp = "0.4"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
